[gd_scene load_steps=2 format=3 uid="uid://c38retsacan6c"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_g5oem"]

[node name="PauseCenterContainer" type="CenterContainer"]
script = ExtResource("1_g5oem")

[node name="PauseMenuPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PauseLabel" type="Label" parent="PauseMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"

[node name="ContinueButton" type="Button" parent="PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="RestartButton" type="Button" parent="PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="MenuButton" type="Button" parent="PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit Game"

[connection signal="button_up" from="PauseMenuPanel/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="PauseMenuPanel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="PauseMenuPanel/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_button_up"]
[connection signal="button_up" from="PauseMenuPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
